# src/OpenIdentityStack.Domain/Applications/ApplicationOptionAvailability.cs
@@ -1,0 +1,9 @@
+namespace OpenIdentityStack.Domain.Applications;
+
+public enum ApplicationOptionAvailability
+{
+    Hidden = 0,
+    ReadOnly = 1,
+    Available = 2,
+    Advanced = 3
+}
